# ezytutors

./: .gitignore  Cargo.toml  README.md
tutor-db/: Cargo.toml
tutor-db/db/: dbscripts.sql  tutor-course.sql
tutor-db/src/: database.sql  lib.rs
tutor-db/src/iter2/: handlers.rs  mod.rs  models.rs  routes.rs
tutor-db/src/iter3/: db_access.rs  handlers.rs  mod.rs  models.rs  routes.rs  state.rs
tutor-db/src/iter4/: db_access.rs  error.rs  handlers.rs  mod.rs  models.rs  routes.rs
tutor-db/src/iter5/: errors.rs  mod.rs  routes.rs
tutor-db/src/iter5/dbaccess/: course.rs  mod.rs  tutor.rs
tutor-db/src/iter5/handlers/: course.rs  general.rs  mod.rs  tutor.rs
tutor-db/src/iter5/models/: course.rs  tutor.rs
tutor-nodb/: Cargo.toml
tutor-nodb/src/: handlers.rs  lib.rs  main.rs  models.rs  routes.rs  state.rs
tutor-web-app/: Cargo.toml
tutor-web-app/db/: user.sql
tutor-web-app/src/: lib.rs  main.rs
tutor-web-app/src/iter5/: dbaccess.rs  errors.rs  handler.rs  mod.rs  model.rs  routes.rs
tutor-web-app/src/iter6/: dbaccess.rs  mod.rs  model.rs  routes.rs
tutor-web-app/src/iter6/handler/: auth.rs  course.rs
tutor-web-app/static/: page.html  styles.css  tutor-style.css
tutor-web-app/static/iter2/: form.html
tutor-web-app/static/iter3/: list.html
tutor-web-app/static/iter4/: list.html
tutor-web-app/static/iter5/: register.html
tutor-web-app/static/iter6/: course-success.html  new-course.html  register.html  signin.html
tutor-web-service/: Cargo.toml
tutor-web-service/src/: main.rs
tutor-web-service/src/tutor/: errors.rs  routes.rs
tutor-web-service/src/tutor/dbaccess/: course.rs  tutor.rs
tutor-web-service/src/tutor/handlers/: course.rs  general.rs  tutor.rs
tutor-web-service/src/tutor/models/: course.rs  tutor.rs
