[package]
name = "tutor-db"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-rt = "2.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
openssl = { version = "0.10.73", features = ["vendored"] }
sqlx = { version = "0.8.6", default-features = false, features = ["postgres","runtime-tokio-native-tls", "macros","chrono"]}
serde = { version = "1.0.225", features = ["derive"] }

[[bin]]
name = "iter2"
path = "src/bin/iter2.rs"

[[bin]]
name = "iter3"
path = "src/bin/iter3.rs"

[lib]
path = "src/lib.rs"