[package]
name = "tutor-nodb"
version = "0.1.0"
authors = ["prestone"]
edition = "2024"
default-run = "tutor-service"

[[bin]]
name = "basic-server"  # Name of the binary

[[bin]]
name = "tutor-service"

[lib]
name = "tutor_nodb"  # Name of the library
path = "src/lib.rs"

[dependencies]
actix-web = "4.11.0"
actix-rt = "2.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.224", features = ["derive"] }
