[package]
name = "tutor-web-app"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-files = "0.6.8"
serde = { version = "1.0.225", features = ["derive"] }
tera = "1.20.0"


[[bin]]
name = "iter1"
path = "src/bin/iter1.rs"

[[bin]]
name = "iter2"
path = "src/bin/iter2.rs"

[[bin]]
name = "iter3"
path = "src/bin/iter3.rs"