[package]
name = "tutor-web-app"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-files = "0.6.8"
actix-rt = "2.11.0"
awc = "3.8.1"
dotenv = "0.15.0"
env_logger = "0.11.8"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", default-features = false, features = ["postgres","runtime-tokio-native-tls", "macros","chrono"]}
tera = "1.20.0"


[[bin]]
name = "iter1"
path = "src/bin/iter1.rs"

[[bin]]
name = "iter2"
path = "src/bin/iter2.rs"

[[bin]]
name = "iter3"
path = "src/bin/iter3.rs"

[[bin]]
name = "iter4"
path = "src/bin/iter4.rs"

[[bin]]
name = "iter5"
path = "src/bin/iter5.rs"

[lib]
name = "iter5"
path = "src/lib.rs"